Controller and Swagger definitions for API endpoint implemented
